<!--
    NIM     : 10119172
    Nama    : Rahman Insani
    Kelas   : IF-5

    Senin, 25 April 2022
-->

<resources>
    <string name="app_name">10119172Latihan2</string>
    <string name="app_logo">BloodShare</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="password_hint">Password</string>
    <string name="retype_password_hint">Retype Password</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="connect_with_facebook">Connect With Facebook</string>
    <string name="register_hint">Doesn\'t have account?&#160;</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="personal">Personal</string>
    <string name="organization">Organization</string>
    <string name="home_address">Home Address</string>
    <string name="default_location">Default Location</string>
    <string name="agree">Agree with Terms and Conditions</string>
    <string name="almost_there">Almost There</string>
    <string name="almost_there_desc">Thank you for registering with us. One more step, you need to check your email to active your account</string>
    <string name="verify">Verify</string>
    <string name="verify_your_account">Verify Your Account</string>
    <string name="verify_your_account_desc">We have send verification code to your email</string>
    <string name="send">Send</string>
    <string name="resend">Resend</string>
    <string name="enter_verification_code_hint">Enter verification code here</string>
    <string name="resend_code_hint">Doesn\'t get the code?&#160;</string>
    <string name="my_name">Rahman Insani</string>
    <string name="my_blood_type">Blood type: B</string>
    <string name="header_bg">Header Background</string>
    <string name="hamburger_menu_icon">Hamburger Menu Icon</string>
    <string name="notification_icon">Notification Icon</string>
    <string name="_75">75</string>
    <string name="blood_give">Blood Give</string>
    <string name="_100">100</string>
    <string name="blood_received">Blood Received</string>
    <string name="_330">330</string>
    <string name="thanks">Thanks</string>
    <string name="search_donor">Search Donor</string>
    <string name="search_donor_desc">Search donor near you</string>
    <string name="blood_needed">Blood Needed</string>
    <string name="blood_needed_desc">4 Users need blood</string>
    <string name="message">Message</string>
    <string name="message_desc">5 New Messages</string>
    <string name="donor_history">Donor History</string>
    <string name="donor_history_desc">5 Gives, 2 Received</string>

</resources>