<?xml version="1.0" encoding="utf-8"?>

<!--
    NIM     : 10119172
    Nama    : Rahman Insani
    Kelas   : IF-5

    Senin, 25 April 2022
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightBlue"
    tools:context=".VerifyAccountActivity"
    >
    <LinearLayout
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/dimen32"
        android:layout_marginEnd="@dimen/dimen32">

        <TextView
            android:layout_gravity="center"
            style="@style/TextWhite36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_your_account"/>

        <TextView
            android:layout_gravity="center_horizontal"
            style="@style/TextSecondaryWhite16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen16"
            android:text="@string/verify_your_account_desc"
            android:textAlignment="center" />


        <EditText
            android:textAlignment="center"
            android:layout_marginTop="@dimen/dimen56"
            style="@style/EditGraySecondary"
            android:inputType="number"
            android:autofillHints="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_verification_code_hint"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/send_button"
            style="@style/ButtonLightBlueWhiteBorder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen16"
            android:text="@string/send" />

        <LinearLayout
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen16"
            android:orientation="horizontal">

            <TextView
                style="@style/TextSecondaryWhite16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend_code_hint" />

            <TextView
                android:id="@+id/resend"
                style="@style/TextWhite16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>